renamed side projects to other projects

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -14,8 +14,8 @@ menu__settings:
       url: '/'
     - title: 'Research'
       url: '/research-projects/'
-    - title: 'Side Projects'
-      url: '/side-projects/'
+    - title: 'Other Projects'
+      url: '/other-projects/'
     - title: 'Publications'
       url: '/publications/'
     - title: 'Press'
